# clab_homelab_tools

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  COMMIT_MESSAGE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICK_REFERENCE.md  README.md  REFACTOR_PROGRESS.md  REFACTOR_PROPOSAL.md  clab-tools.sh  config.example.nocomments.yaml  config.example.yaml  config.local.example.yaml  config.yaml  example_connections.csv  example_nodes.csv  implementation-plan.md  install-cli.sh  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  supported_kinds.yaml  topology_template.j2
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
clab_tools/: __init__.py  _version.py  cli.py  main.py
clab_tools/bridges/: __init__.py  manager.py
clab_tools/commands/: bridge_commands.py  config_commands.py  data_commands.py  generate_topology.py  import_csv.py  lab_commands.py  node_commands.py  remote_commands.py  topology_commands.py
clab_tools/common/: __init__.py  utils.py
clab_tools/config/: __init__.py  settings.py
clab_tools/db/: context.py  manager.py  models.py
clab_tools/errors/: __init__.py  exceptions.py  handlers.py
clab_tools/log_config/: __init__.py  logger.py
clab_tools/node/: __init__.py  command_manager.py  config_manager.py  manager.py
docs/: api-reference.md  architecture.md  commands.md  configuration-override-patterns.md  configuration.md  csv-format.md  developer-guide.md  development-workflow.md  development.md  getting-started.md  installation.md  remote-host-management.md  remote-setup.md  simplified-bridge-guide.md  troubleshooting.md  user-guide.md  workflows-and-architecture.md
scripts/: fix-lint.sh  setup-dev.sh  version.sh
tests/: conftest.py  test_bootstrap_teardown.py  test_bridge_manager.py  test_config.py  test_config_commands.py  test_config_discovery.py  test_config_env_priority.py  test_configure_vlans_cli.py  test_csv_import.py  test_database.py  test_generate_topology_command.py  test_lab_switch_persistence.py  test_node_command_manager.py  test_node_config_cli.py  test_node_config_manager.py  test_node_drivers_base.py  test_node_drivers_juniper.py  test_node_drivers_registry.py  test_node_upload.py  test_quiet_mode.py  test_remote_bridge_integration.py  test_remote_host.py  test_remote_topology_integration.py  test_start_stop_commands.py  test_topology_generator.py
(+6 files in other folders)
