[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clab-homelab-tools"
dynamic = ["version"]
description = "A comprehensive CLI tool for managing containerlab network topologies with persistent storage"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Marc Colburn"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
keywords = ["containerlab", "networking", "topology", "automation", "homelab"]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0.0",
    "colorama>=0.4.6",
    "junos-eznc>=2.7.0",
    "lxml>=5.0.0",
    "transitions>=0.9.0",
    "rich>=13.0.0",
    "pydantic-settings>=2.0.0",
    "paramiko>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=7.0.0",
    "autoflake>=2.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/marccolburn/clab_homelab_tools"
Repository = "https://github.com/marccolburn/clab_homelab_tools"
Documentation = "https://github.com/marccolburn/clab_homelab_tools/tree/main/docs"
Issues = "https://github.com/marccolburn/clab_homelab_tools/issues"

[project.scripts]
clab-tools = "clab_tools.cli:main"

[tool.setuptools.packages.find]
include = ["clab_tools*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=clab_tools",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.setuptools.dynamic]
version = {attr = "clab_tools.__version__"}
